--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,3 +5,5 @@
 @import 'components/selects.scss';
 @import 'components/buttons.scss';
 @import 'components/loader.scss';
+@import 'layout/container.scss';
+@import 'components/card.scss';
