--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -5,5 +5,6 @@ $link_color: #c8b8db;
 $botton_hover: #70587c;
 
 //font
-$font_family: courier new;
+$font_body: courier new;
+$font_cards: verdana;
 $title_log: 30px
