--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -1,10 +1,9 @@
 //Pallette
-$navbar_color: #502f4c;
-$font_color: #000000;
-$link_color: #c8b8db;
-$botton_hover: #70587c;
+$navbar_color: #202020;
+$font_color: #ffd100;
+$link_color: #d6d6d6;
+$botton_hover: #ffee32;
 
 //font
-$font_body: courier new;
-$font_cards: verdana;
+$font_body: verdana;
 $title_log: 30px
