--- a/sass/abstracts/mixins.scss
+++ b/sass/abstracts/mixins.scss
@@ -4,3 +4,24 @@
     flex-direction: $direction;
     align-items: $alignment;
 }
+
+@mixin card ($direction: column){
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    height: 300px;
+    margin: 10px;
+    padding: 15px;
+    background-color: $link_color ;
+    border: 1px black solid;
+    border-radius: 5px;
+    box-sizing:content-box;
+
+    span{
+        width: 110px;      
+        text-align: center;
+        margin: 5px;
+        font-size: 12px;
+        font-weight: bold;
+    }
+}
