--- a/css/styles.css
+++ b/css/styles.css
@@ -54,10 +54,11 @@ button:hover {
 }
 
 .btn-details {
-  width: 80%;
-  margin: 0 auto;
+  width: 60%;
+  margin: auto;
   border: 1px solid #202020;
   cursor: pointer;
+  border-radius: 20px;
 }
 
 .btn-details:hover {
@@ -192,6 +193,27 @@ form button {
   display: flex;
   padding: 10px;
   justify-content: right;
+}
+
+.alert-container {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.alert-container .alert {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
 }
 
 /*# sourceMappingURL=styles.css.map */
