--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -1,9 +1,9 @@
 //Pallette
-$navbar_color: #202020;
-$font_color: #ffd100;
-$link_color: #d6d6d6;
-$botton_hover: #ffee32;
-
+$navbar_color: #323232;
+$font_color: #323232;
+$back_color: #ECECEC;
+$botton_hover: #DCCA6B;
+$titles_color: #E9C335;
 //font
-$font_body: verdana;
-$title_log: 30px
+$font_body: 'Koulen', cursive;
+$title_log: 40px
