--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,15 @@
 .nav__bar {
-  background-color: #202020;
+  background-color: #323232;
   padding: 20px 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 100%;
 }
-.nav__bar img {
-  height: 80px;
-  border-radius: 50%;
-}
-.nav__bar h3 {
-  font-size: 30px;
-  margin: 10px;
-  color: #d6d6d6;
+.nav__bar h1 {
+  font-size: 40px;
+  margin-left: 50px;
+  color: #E9C335;
 }
 
 .nav__bar--buttons {
@@ -21,14 +18,15 @@
 }
 .nav__bar--buttons a {
   text-decoration: none;
-  color: #d6d6d6;
-  margin: 5px;
+  color: #E9C335;
+  margin: 15px;
+  font-size: 20px;
 }
 
 * {
   padding: 0px;
   margin: 0px;
-  font-family: verdana;
+  font-family: "Koulen", cursive;
 }
 
 .main {
@@ -44,24 +42,30 @@
 button {
   width: 70px;
   height: 30px;
-  background-color: #ffee32;
-  border: #d6d6d6 1px solid;
+  background-color: #E9C335;
   border-radius: 5px;
 }
 
 button:hover {
-  background-color: #d6d6d6;
+  background-color: #DCCA6B;
 }
 
 .btn-details {
-  width: 80%;
+  width: 30%;
   margin: 0 auto;
-  border: 1px solid #202020;
+  border: 1px solid #323232;
   cursor: pointer;
+  border-radius: 20px;
 }
 
 .btn-details:hover {
-  background-color: #ffd100;
+  background-color: #DCCA6B;
+}
+
+.details-button {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
 }
 
 .btn-card_detail {
@@ -73,13 +77,17 @@ button:hover {
   margin: 10px 5px;
 }
 .btn-card_detail .btn_card:hover {
-  background-color: #ffd100;
+  background-color: #DCCA6B;
 }
 .btn-card_detail .delete {
   background-color: #ee2e31;
 }
 .btn-card_detail .delete:hover {
   background-color: #ff3c38;
+}
+
+.edit {
+  display: none;
 }
 
 .container__cards {
@@ -94,18 +102,17 @@ button:hover {
 .card {
   display: flex;
   flex-direction: column;
-  width: 500px;
-  height: 300px;
-  margin: 10px;
+  width: 300px;
+  height: 350px;
+  margin: 20px;
   padding: 15px;
-  background-color: #d6d6d6;
-  border: 1px black solid;
-  border-radius: 5px;
+  background-color: rgb(240, 238, 238);
+  border-radius: 10px;
   box-sizing: content-box;
+  filter: drop-shadow(-1px 0px 5px #868585);
   overflow: auto;
 }
 .card span {
-  width: 110px;
   text-align: center;
   margin: 5px;
   font-size: 12px;
@@ -118,7 +125,6 @@ button:hover {
 .card .loader {
   margin: 5px;
   padding: 2px 0px;
-  background-color: #d6d6d6;
   border: black 1px solid;
   border-radius: 5px;
 }
@@ -126,24 +132,25 @@ button:hover {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  background-color: rgb(168, 168, 168);
+  float: inline-end;
 }
 
 .card-detail {
   display: flex;
   flex-direction: column;
-  width: 500px;
-  height: 300px;
-  margin: 10px;
+  width: 300px;
+  height: 350px;
+  margin: 20px;
   padding: 15px;
-  background-color: #d6d6d6;
-  border: 1px black solid;
-  border-radius: 5px;
+  background-color: rgb(240, 238, 238);
+  border-radius: 10px;
   box-sizing: content-box;
+  filter: drop-shadow(-1px 0px 5px #868585);
   height: fit-content;
   width: 80%;
 }
 .card-detail span {
-  width: 110px;
   text-align: center;
   margin: 5px;
   font-size: 12px;
@@ -156,7 +163,7 @@ button:hover {
 
 footer {
   text-align: center;
-  background-color: #202020;
+  background-color: #323232;
   color: white;
   padding: 20px;
   position: absolute;
@@ -175,7 +182,8 @@ form {
   padding: 10px;
   display: none;
 }
-form input {
+form input,
+form textarea {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
@@ -192,6 +200,43 @@ form button {
   display: flex;
   padding: 10px;
   justify-content: right;
+}
+
+.alert-container {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.alert-container .alert {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
+.welcome {
+  display: flex;
+  margin: 30px;
+  justify-content: space-around;
+  padding: 15px;
+  background-color: #E9C335;
+}
+.welcome img {
+  width: 30%;
+}
+.welcome h1 {
+  font-size: 50px;
+  padding-top: 10%;
+  text-shadow: 4px 3px 6px rgba(50, 50, 50, 0.78);
 }
 
 /*# sourceMappingURL=styles.css.map */
