--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -10,24 +10,24 @@ form {
     padding: 10px;
     display: none;
 
-    input {
-    display: flex;
-    flex-wrap: wrap;
-    width: 80%;
-    height: 30px;
-    align-items: center;
-    margin: 0 auto;
-    margin-top: 10px;
+    input,
+    textarea {
+        display: flex;
+        flex-wrap: wrap;
+        width: 80%;
+        height: 30px;
+        align-items: center;
+        margin: 0 auto;
+        margin-top: 10px;
     }
-    button{
+
+    button {
         margin: 5px;
     }
 }
 
-  .btn-form{
-        display: flex;
-        padding: 10px;
-        justify-content: right;
-    }
-
-
+.btn-form {
+    display: flex;
+    padding: 10px;
+    justify-content: right;
+}
