--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,70 @@ button:hover {
   display: none;
 }
 
+.leap-frog {
+  --uib-size: 50px;
+  --uib-speed: 2.5s;
+  --uib-color: black;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: var(--uib-size);
+  height: var(--uib-size);
+}
+
+.leap-frog__dot {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  height: 100%;
+}
+
+.leap-frog__dot::before {
+  content: "";
+  display: block;
+  height: calc(var(--uib-size) * 0.22);
+  width: calc(var(--uib-size) * 0.22);
+  border-radius: 50%;
+  background-color: var(--uib-color);
+  will-change: transform;
+}
+
+.leap-frog__dot:nth-child(1) {
+  animation: leapFrog var(--uib-speed) ease infinite;
+}
+
+.leap-frog__dot:nth-child(2) {
+  transform: translateX(calc(var(--uib-size) * 0.4));
+  animation: leapFrog var(--uib-speed) ease calc(var(--uib-speed) / -1.5) infinite;
+}
+
+.leap-frog__dot:nth-child(3) {
+  transform: translateX(calc(var(--uib-size) * 0.8)) rotate(0deg);
+  animation: leapFrog var(--uib-speed) ease calc(var(--uib-speed) / -3) infinite;
+}
+
+@keyframes leapFrog {
+  0% {
+    transform: translateX(0) rotate(0deg);
+  }
+  33.333% {
+    transform: translateX(0) rotate(180deg);
+  }
+  66.666% {
+    transform: translateX(calc(var(--uib-size) * -0.4)) rotate(180deg);
+  }
+  99.999% {
+    transform: translateX(calc(var(--uib-size) * -0.8)) rotate(180deg);
+  }
+  100% {
+    transform: translateX(0) rotate(0deg);
+  }
+}
 .container__cards {
   display: flex;
   flex-direction: row;
@@ -97,6 +161,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin-top: 10px;
 }
 
 .card {
@@ -200,6 +265,10 @@ form button {
   display: flex;
   padding: 10px;
   justify-content: right;
+  text-decoration: none;
+}
+.btn-form button {
+  margin: 5px;
 }
 
 .alert-container {
@@ -221,6 +290,75 @@ form button {
   width: 400px;
   display: flex;
   flex-direction: column;
+}
+
+.alert-container-success {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+.alert-container-success .alert-success {
+  background-color: #a2eb90;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.alert-container-delete {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+.alert-container-delete .alert-delete {
+  background-color: #d87070;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.alert-container-edit {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+}
+.alert-container-edit .alert-edit {
+  background-color: #f3f3f3;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
 
 .welcome {
