--- a/sass/components/form.scss
+++ b/sass/components/form.scss
@@ -30,4 +30,9 @@ form {
     display: flex;
     padding: 10px;
     justify-content: right;
+    text-decoration: none;
+    
+    button {
+        margin: 5px;
+    }
 }
