--- a/sass/abstracts/variables.scss
+++ b/sass/abstracts/variables.scss
@@ -6,4 +6,5 @@ $botton_hover: #DCCA6B;
 $titles_color: #E9C335;
 //font
 $font_body: 'Koulen', cursive;
-$title_log: 40px
+$title_log: 40px;
+$media-size: 2em;
