--- a/sass/layout/welcome.scss
+++ b/sass/layout/welcome.scss
@@ -4,6 +4,7 @@
     justify-content: space-around;
     padding: 15px;
     background-color: $titles_color;
+    height: 5%;
 
     img {
         width: 30%;
