--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@
   .nav__bar--buttons a {
     text-decoration: none;
     color: #E9C335;
-    margin: 15px;
+    margin: 10px;
     font-size: 15px;
   }
 }
@@ -367,6 +367,7 @@ form button {
   width: 400px;
   display: flex;
   flex-direction: column;
+  border-radius: 10px;
 }
 
 .alert-container-success {
@@ -390,6 +391,7 @@ form button {
   display: flex;
   flex-direction: column;
   text-align: center;
+  border-radius: 10px;
 }
 
 .alert-container-delete {
@@ -413,6 +415,7 @@ form button {
   display: flex;
   flex-direction: column;
   text-align: center;
+  border-radius: 10px;
 }
 
 .alert-container-edit {
@@ -436,14 +439,117 @@ form button {
   display: flex;
   flex-direction: column;
   text-align: center;
+  border-radius: 10px;
 }
 
+@media (max-width: 360px) {
+  .alert-container {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .alert-container .alert {
+    background-color: #fefefe;
+    margin: 50% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+  }
+}
+@media (max-width: 360px) {
+  .alert-container-success {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+  }
+  .alert-container-success .alert-success {
+    background-color: #a2eb90;
+    margin: 50% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 12px;
+    border-radius: 10px;
+  }
+}
+@media (max-width: 360px) {
+  .alert-container-delete {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+  }
+  .alert-container-delete .alert-delete {
+    background-color: #d87070;
+    margin: 50% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 12px;
+    border-radius: 10px;
+  }
+}
+@media (max-width: 360px) {
+  .alert-container-edit {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+  }
+  .alert-container-edit .alert-edit {
+    background-color: #f3f3f3;
+    margin: 50% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 12px;
+    border-radius: 10px;
+  }
+}
 .welcome {
   display: flex;
   margin: 30px;
   justify-content: space-around;
   padding: 15px;
   background-color: #E9C335;
+  height: 5%;
 }
 .welcome img {
   width: 30%;
