--- a/sass/components/alert.scss
+++ b/sass/components/alert.scss
@@ -18,6 +18,7 @@
         width: 400px;
         display: flex;
         flex-direction: column;
+        border-radius: 10px;
       }
 }
 
@@ -42,6 +43,7 @@
       display: flex;
       flex-direction: column;
       text-align: center;
+      border-radius: 10px;
   }
 
 }
@@ -67,6 +69,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    border-radius: 10px;
 }} 
 
 .alert-container-edit{
@@ -90,4 +93,113 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    border-radius: 10px;
 }} 
+
+@media (max-width: 360px){
+  .alert-container {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  
+  
+      .alert {
+          background-color: #fefefe;
+          margin: 50% auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 200px;
+          display: flex;
+          flex-direction: column;
+          border-radius: 10px;
+        }
+  }
+}
+
+@media (max-width: 360px){
+.alert-container-success {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+
+  .alert-success{
+    background-color: #a2eb90;
+      margin: 50% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 200px;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      font-size: 12px;
+      border-radius: 10px;
+  }
+
+}
+}
+
+@media (max-width:360px){
+.alert-container-delete{
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+
+ .alert-delete{
+    background-color: #d87070;
+    margin: 50% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 200px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 12px;
+    border-radius: 10px;
+}} }
+
+@media(max-width:360px){
+  .alert-container-edit{
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+    display: none;
+  
+   .alert-edit{
+      background-color: #f3f3f3;
+      margin: 50% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 200px;
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      font-size: 12px;
+      border-radius: 10px;
+  }} 
+}
